posters and programme

--- a/index.html
+++ b/index.html
@@ -307,10 +307,11 @@
 									<li>Anna Nierenberg (Jet Propulsion Laboratory)
 									<li>Kyle Oman (Kapteyn Institute)
 									<li>Matthew Orkney (University of Surrey)
-									<li>Raffaele Pascale (University of Bologna - DIFA (Department of Physics and Astrophysics))
+									<li>Raffaele Pascale (University of Bologna - DIFA)
 									<li>Ekta Patel (University of Arizona)
 									<li>Sanjaya Paudel (Yonsei University)
 									<li>Marcel Pawlowski (Leibniz-Institute for Astrophysics Potsdam)
+									<li>Susana Pedrosa (IAFE - UAM)
 									<li>Reynier Peletier (University of Groningen)
 									<li>Andrew Pontzen (UCL)
 									<li>Rhys Poulton (ICRAR)
@@ -348,6 +349,7 @@
 									<li>Tom Theuns (Durham University)
 									<li>Guillaume Thomas (NRC Herzberg Astronomy &amp; Astrophysics)
 									<li>Erik Tollerud (Space Telescope Science Institute)
+									<li>Risa Wechsler (Stanford)
 									<li>Dan Weisz (UC Berkeley)
 									<li>Louise Welsh (Durham University)
 									<li>Andrew Wetzel (University of California, Davis)
@@ -370,18 +372,87 @@
                             <h2>Conference Programme</h2>
                             The conference programme is given below. Long talks (L) are <i>20 mins</i>
                             (+ 5 mins questions), whilst short talks (S) are <i>12 mins</i> (+ 3 mins questions).
-                            Poster FLASH presentations are <i>2 mins</i> each.
+                            Poster presentations are <i>2 mins</i> each.
                             Coffee will be served in the <i>30 mins</i> breaks, whilst lunch will be <i>90 mins</i><br>
-                            <!--<b><a href='docs/Programme_abstracts.pdf'>Abstract booklet</a></b><br>-->
+                            Here is the <b><a href='docs/Conference_Programme.pdf'>Conference Programme</a></b><br>
                             <!--<b><a href='docs/talks_guidelines.pdf'>General guidelines for presentations</a></b><br>-->
                             <!--<b><a href='docs/flash_guidelines.pdf'>Guidelines for flash talks</a></b>-->
+
+							<br><h3>Poster Presentations</h3>
+                            <div class="features">
+                                <section>
+                                    <b>Poster Presentations Group 1</b><br>
+                                    <b>Monday: 12:15-12:30</b><br>
+                                    <br>
+									Luca Beale (<a href='slides/PP1/NA_slides.pdf'>slides</a>, <a href='slides/PP1/NA_poster.pdf'>poster</a>)<br>
+									Paul Bennet (<a href='slides/PP1/NA_slides.pdf'>slides</a>, <a href='slides/PP1/NA_poster.pdf'>poster</a>)<br>
+									Katie Chamberlain (<a href='slides/PP1/NA_slides.pdf'>slides</a>, <a href='slides/PP1/NA_poster.pdf'>poster</a>)<br>
+									Anirudh Chiti (<a href='slides/PP1/NA_slides.pdf'>slides</a>, <a href='slides/PP1/NA_poster.pdf'>poster</a>)<br>
+									Richard D'Souza (<a href='slides/PP1/NA_slides.pdf'>slides</a>, <a href='slides/PP1/NA_poster.pdf'>poster</a>)<br>
+									Michele De Leo (<a href='slides/PP1/NA_slides.pdf'>slides</a>, <a href='slides/PP1/NA_poster.pdf'>poster</a>)<br>
+									Andres del Pino (<a href='slides/PP1/NA_slides.pdf'>slides</a>, <a href='slides/PP1/NA_poster.pdf'>poster</a>)<br>
+									Dhruba Dutta Chowdhury (<a href='slides/PP1/NA_slides.pdf'>slides</a>, <a href='slides/PP1/NA_poster.pdf'>poster</a>)<br>
+                                </section>
+                                <section>
+                                    <b>Poster Presentations Group 2</b><br>
+                                    <b>Monday: 15:15-15:30</b><br>
+                                    <br>
+                                    F. Sara Eftekhari (<a href='slides/PP2/NA_slides.pdf'>slides</a>, <a href='slides/PP2/NA_poster.pdf'>poster</a>)<br>
+									Lydia Elias (<a href='slides/PP2/NA_slides.pdf'>slides</a>, <a href='slides/PP2/NA_poster.pdf'>poster</a>)<br>
+									Christoph Engler (<a href='slides/PP2/NA_slides.pdf'>slides</a>, <a href='slides/PP2/NA_poster.pdf'>poster</a>)<br>
+									Raphael Errani (<a href='slides/PP2/NA_slides.pdf'>slides</a>, <a href='slides/PP2/NA_poster.pdf'>poster</a>)<br>
+									Ivanna Escala (<a href='slides/PP2/NA_slides.pdf'>slides</a>, <a href='slides/PP2/NA_poster.pdf'>poster</a>)<br>
+									Catherine Fielder (<a href='slides/PP2/NA_slides.pdf'>slides</a>, <a href='slides/PP2/NA_poster.pdf'>poster</a>)<br>
+									Tobias Fritz (<a href='slides/PP2/NA_slides.pdf'>slides</a>, <a href='slides/PP2/NA_poster.pdf'>poster</a>)<br>
+                                </section>
+                                <section>
+                                    <b>Poster Presentations Group 3</b><br>
+                                    <b>Tuesday: 12:00-12:15</b><br>
+                                    <br>
+                                    Marla Geha (<a href='slides/PP3/NA_slides.pdf'>slides</a>, <a href='slides/PP3/NA_poster.pdf'>poster</a>)<br>
+									Alexandra Gregory (<a href='slides/PP3/NA_slides.pdf'>slides</a>, <a href='slides/PP3/NA_poster.pdf'>poster</a>)<br>
+									Wojciech Hellwing (<a href='slides/PP3/NA_slides.pdf'>slides</a>, <a href='slides/PP3/NA_poster.pdf'>poster</a>)<br>
+									Chervin Laporte (<a href='slides/PP3/NA_slides.pdf'>slides</a>, <a href='slides/PP3/NA_poster.pdf'>poster</a>)<br>
+									Geraint Lewis (<a href='slides/PP3/NA_slides.pdf'>slides</a>, <a href='slides/PP3/NA_poster.pdf'>poster</a>)<br>
+									Zhaozhou Li (<a href='slides/PP3/NA_slides.pdf'>slides</a>, <a href='slides/PP3/NA_poster.pdf'>poster</a>)<br>
+									Nicolas Longeard (<a href='slides/PP3/NA_slides.pdf'>slides</a>, <a href='slides/PP3/NA_poster.pdf'>poster</a>)<br>
+                                </section>
+                                <section>
+                                    <b>Poster Presentations Group 4</b><br>
+                                    <b>Tuesday: 12:15-12:30</b><br>
+                                    <br>
+                                    Aaron Ludlow (<a href='slides/PP4/NA_slides.pdf'>slides</a>, <a href='slides/PP4/NA_poster.pdf'>poster</a>)<br>
+									Pol Massana (<a href='slides/PP4/NA_slides.pdf'>slides</a>, <a href='slides/PP4/NA_poster.pdf'>poster</a>)<br>
+									Matthew Orkney (<a href='slides/PP4/NA_slides.pdf'>slides</a>, <a href='slides/PP4/NA_poster.pdf'>poster</a>)<br>
+									Sanjaya Paudel (<a href='slides/PP4/NA_slides.pdf'>slides</a>, <a href='slides/PP4/NA_poster.pdf'>poster</a>)<br>
+									Rhys Poulton (<a href='slides/PP4/NA_slides.pdf'>slides</a>, <a href='slides/PP4/NA_poster.pdf'>poster</a>)<br>
+									Janet Preston (<a href='slides/PP4/NA_slides.pdf'>slides</a>, <a href='slides/PP4/NA_poster.pdf'>poster</a>)<br>
+									Ragadeepika Pucha (<a href='slides/PP4/NA_slides.pdf'>slides</a>, <a href='slides/PP4/NA_poster.pdf'>poster</a>)<br>
+									Daniella Roberts (<a href='slides/PP4/NA_slides.pdf'>slides</a>, <a href='slides/PP4/NA_poster.pdf'>poster</a>)<br>
+                                </section>
+                                <section>
+                                    <b>Poster Presentations Group 5</b><br>
+                                    <b>Tuesday: 15:15-15:30</b><br>
+                                    <br>
+                                    Anton Rudakovskyi (<a href='slides/PP5/NA_slides.pdf'>slides</a>, <a href='slides/PP5/NA_poster.pdf'>poster</a>)<br>
+									Elena Sacchi (<a href='slides/PP5/NA_slides.pdf'>slides</a>, <a href='slides/PP5/NA_poster.pdf'>poster</a>)<br>
+									Isabel Santos Santos (<a href='slides/PP5/NA_slides.pdf'>slides</a>, <a href='slides/PP5/NA_poster.pdf'>poster</a>)<br>
+									Matthew Smith (<a href='slides/PP5/NA_slides.pdf'>slides</a>, <a href='slides/PP5/NA_poster.pdf'>poster</a>)<br>
+									Salvatore Taibi (<a href='slides/PP5/NA_slides.pdf'>slides</a>, <a href='slides/PP5/NA_poster.pdf'>poster</a>)<br>
+									Guillaume Thomas (<a href='slides/PP5/NA_slides.pdf'>slides</a>, <a href='slides/PP5/NA_poster.pdf'>poster</a>)<br>
+									David Williamson (<a href='slides/PP5/NA_slides.pdf'>slides</a>, <a href='slides/PP5/NA_poster.pdf'>poster</a>)<br>
+									Zhen Yuan (<a href='slides/PP5/NA_slides.pdf'>slides</a>, <a href='slides/PP5/NA_poster.pdf'>poster</a>)<br>
+                                </section>
+                                <section>
+                                </section>
+                            </div>
 
                             <h3>Monday</h3>
                             <div class="features">
                                 <section>
                                     <b>Registration: 08:00 - 08:50</b><br>
                                     <b>Session 1: 09:00 - 10:30</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Alis Deason<br>
                                     Welcome<br>
                                     Alyson Brooks (L)<br>
                                     Martin Rey (S)<br>
@@ -390,27 +461,27 @@
                                 </section>
                                 <section>
                                     <b>Session 2: 11:00 - 12:30</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Andrew Pontzen<br>
                                     James Bullock (S)<br>
                                     Andrew Graus (S)<br>
                                     Anna Nierenberg (S)<br>
                                     Alejandro Benitez-Llambay (S)<br>
                                     Calvin Sykes (S)<br>
-                                    Poster FLASH presentations<br>
+                                    Poster presentations 1<br>
                                 </section>
                                 <section>
                                     <b>Session 3: 14:00 - 15:30</b><br>
-                                    Chair: TBD<br>
+                                    Chair: TBC<br>
                                     Jessie Hirtenstein (S)<br>
                                     Justin Read (S)<br>
                                     Anna Genina (S)<br>
                                     Stacy Kim (S)<br>
                                     Azi Fattahi (S)<br>
-                                    Poster FLASH presentations<br>
+                                    Poster presentations 2<br>
                                 </section>
                                 <section>
                                     <b>Session 4: 16:00 - 17:00</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Gurtina Besla<br>
                                     Oliver Newton (S)<br>
                                     Nitya Kallivayalil (L)<br>
                                     Ekta Patel (S)<br>
@@ -420,8 +491,8 @@
                             <div class="features">
                                 <section>
                                     <b>Session 5: 09:00 - 10:30</b><br>
-                                    Chair: TBD<br>
-                                    Discussion<br>
+                                    Chair: Betsey Adams<br>
+                                    Discussion (Alis Deason, Andrew Pontzen, TBC)<br>
                                     Kareem El-Badry (S)<br>
                                     Shobita Satyapal (S)<br>
                                     Christina Manzano-King (S)<br>
@@ -429,24 +500,25 @@
                                 </section>
                                 <section>
                                     <b>Session 6: 11:00 - 12:30</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Josh Simon<br>
                                     Evan Kirby (S)<br>
                                     Michelle Collins (L)<br>
                                     Anna Wright (S)<br>
-                                    Poster FLASH presentations<br>
+                                    Poster presentations 3<br>
+                                    Poster presentations 4<br>
                                 </section>
                                 <section>
                                     <b>Session 7: 13:55 - 15:30</b><br>
-                                    Chair: TBD<br>
+                                    Chair: James Bullock<br>
                                     Louis Strigari (L)<br>
                                     Laura Chang (S)<br>
                                     Marla Geha (L)<br>
                                     Davide Massari (S)<br>
-                                    Poster FLASH presentations<br>
+                                    Poster presentations 5<br>
                                 </section>
                                 <section>
                                     <b>Session 8: 16:00 - 17:00</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Alyson Brooks<br>
                                     Raffaele Pascale (S)<br>
                                     Isabel M. E. Santos-Santos (S)<br>
                                     Kyle Oman (S)<br>
@@ -477,7 +549,7 @@
                             <div class="features">
                                 <section>
                                     <b>Session 9: 9:00 - 10:25</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Evan Skillman<br>
                                     Tiffany Hsyu (S)<br>
                                     Kristen McQuinn (S)<br>
                                     Bethan James (S)<br>
@@ -486,7 +558,7 @@
                                 </section>
                                 <section>
                                     <b>Session 10: 10:55 - 12:40</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Ryan Cooke<br>
                                     Dan Stark (L)<br>
                                     Danielle Berg (S)<br>
                                     Brian Siana (L)<br>
@@ -509,8 +581,8 @@
                             <div class="features">
                                 <section>
                                     <b>Session 11: 09:00 - 10:30</b><br>
-                                    Chair: TBD<br>
-                                    Discussion<br>
+                                    Chair: Kristen McQuinn<br>
+                                    Discussion (Ryan Cooke, TBC, TBC)<br>
                                     Adam Smercina (S)<br>
                                     Sabrina Stierwalt (S)<br>
                                     Ana Hidalgo-Gamez (S)<br>
@@ -518,7 +590,7 @@
                                 </section>
                                 <section>
                                     <b>Session 12: 11:00 - 12:35</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Michelle Collins<br>
                                     Clare Higgs (S)<br>
                                     Betsey Adams (S)<br>
                                     Erik Tollerud (S)<br>
@@ -530,7 +602,7 @@
                             <div class="features">
                                 <section>
                                     <b>Session 13: 14:05 - 15:25</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Ryan Cooke<br>
                                     Josh Simon (S)<br>
                                     John Wise (L)<br>
                                     Louise Welsh (S)<br>
@@ -538,7 +610,7 @@
                                 </section>
                                 <section>
                                     <b>Session 14: 13:55 - 17:00</b><br>
-                                    Chair: TBD<br>
+                                    Chair: Evan Kirby<br>
                                     Myoungwon Jeon (S)<br>
                                     Anna Frebel (L)<br>
                                     Alex Ji (L)<br>
@@ -552,7 +624,7 @@
                                 <div class="features">
                                     <section>
                                         <b>Session 14: 09:00 - 10:25</b><br>
-                                        Chair: TBD<br>
+                                        Chair: Nitya Kallivayalil<br>
                                         Andrew Wetzel (L)<br>
                                         Marcel S. Pawlowski (S)<br>
                                         Shi Shao (S)<br>
@@ -560,27 +632,29 @@
                                         Alexander Riley (S)<br>
                                     </section>
                                     <section>
-                                        <b>Session 15: 10:55 - 12:35</b><br>
-                                        Chair: TBD<br>
+                                        <b>Session 15: 10:55 - 12:20</b><br>
+                                        Chair: Andrew Wetzel<br>
                                         Marius Cautun (S)<br>
                                         Nico Garavito-Camargo (S)<br>
                                         Christine Simpson (S)<br>
                                         Ana Bonaca (L)<br>
                                         Denis Erkal (S)<br>
-                                        Nora Shipp (S)<br>
                                     </section>
                                     <section>
-                                        <b>Session 16: 14:05 - 15:15</b><br>
-                                        Chair: TBD<br>
+                                        <b>Session 16: 14:00 - 15:25</b><br>
+                                        Chair: Marla Geha<br>
+                                        Nora Shipp (S)<br>
                                         Ian Roederer (S)<br>
                                         Giuseppina Battaglia (L)<br>
                                         Nathan Sandford (S)<br>
                                         Evan Skillman (S)<br>
                                     </section>
                                     <section>
-                                        <b>Session 17: 15:45 - 16:15</b><br>
+                                        <b>Session 17: 15:55 - 17:00</b><br>
+										Chair: Alis Deason<br>
+                                        Risa Wechsler (L)<br>
                                         Carlos Frenk (L)<br>
-                                        Concluding Remarks (S)<br>
+                                        Concluding Remarks - Alis Deason (S)<br>
                                     </section>
                                 </div>
                             <b>Conference End</b>
@@ -592,8 +666,6 @@
 						<div class="inner">
 							<h2>Registration is closed!</h2>
                             <hr>
-							<p>The conference abstract booklet will be announced shortly - thanks for your patience!
-							</p>
 						</div>
 					</section>
 
