--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
 									Geraint Lewis (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
 									Zhaozhou Li (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
 									Nicolas Longeard (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
+									Mark Lovell (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 4</b><br>
