--- a/index.html
+++ b/index.html
@@ -384,24 +384,23 @@
                                     <b>Poster Presentations Group 1</b><br>
                                     <b>Monday: 12:15-12:30</b><br>
                                     <br>
-									Luca Beale (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
+									Luca Beale (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/Beale_poster'>poster</a>)<br>
 									Paul Bennet (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
 									Katie Chamberlain (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
 									Anirudh Chiti (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
 									Richard D'Souza (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
 									Michele De Leo (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
 									Andres del Pino (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
-									Dhruba Dutta Chowdhury (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 2</b><br>
                                     <b>Monday: 15:15-15:30</b><br>
                                     <br>
+									Dhruba Dutta Chowdhury (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
                                     F. Sara Eftekhari (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
-									Lydia Elias (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
 									Christoph Engler (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
 									Raphael Errani (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
-									Ivanna Escala (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
+									Ivanna Escala (<a href='slides/PP2/Escala_slides'>slides</a>, <a href='slides/PP2/Escala_poster'>poster</a>)<br>
 									Catherine Fielder (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
 									Tobias Fritz (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
                                 </section>
@@ -412,17 +411,15 @@
                                     Marla Geha (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
 									Alexandra Gregory (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
 									Wojciech Hellwing (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
-									Chervin Laporte (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
 									Geraint Lewis (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
 									Zhaozhou Li (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
 									Nicolas Longeard (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
-									Mark Lovell (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
+                                    Aaron Ludlow (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 4</b><br>
                                     <b>Tuesday: 12:15-12:30</b><br>
                                     <br>
-                                    Aaron Ludlow (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
 									Pol Massana (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
 									Matthew Orkney (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
 									Sanjaya Paudel (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
@@ -457,7 +454,7 @@
                                     Welcome<br>
                                     Alyson Brooks (L)<br>
                                     Martin Rey (S)<br>
-                                    Annette Ferguson (S)<br>
+                                    Azi Fattahi (S)<br>
                                     Vasily Belokurov (L)<br>
                                 </section>
                                 <section>
@@ -477,7 +474,7 @@
                                     Justin Read (S)<br>
                                     Anna Genina (S)<br>
                                     Stacy Kim (S)<br>
-                                    Azi Fattahi (S)<br>
+                                    Mark Lovell (S)<br>
                                     Poster presentations 2<br>
                                 </section>
                                 <section>
@@ -493,7 +490,7 @@
                                 <section>
                                     <b>Session 5: 09:00 - 10:30</b><br>
                                     Chair: Betsey Adams<br>
-                                    Discussion (Alis Deason, Andrew Pontzen, TBC)<br>
+                                    Discussion (Gurtina Besla, Alis Deason, Andrew Pontzen)<br>
                                     Kareem El-Badry (S)<br>
                                     Shobita Satyapal (S)<br>
                                     Christina Manzano-King (S)<br>
@@ -583,7 +580,7 @@
                                 <section>
                                     <b>Session 11: 09:00 - 10:30</b><br>
                                     Chair: Kristen McQuinn<br>
-                                    Discussion (Ryan Cooke, TBC, TBC)<br>
+                                    Discussion (Michelle Collins, Ryan Cooke, Brian Siana)<br>
                                     Adam Smercina (S)<br>
                                     Sabrina Stierwalt (S)<br>
                                     Ana Hidalgo-Gamez (S)<br>
@@ -644,9 +641,10 @@
                                     <section>
                                         <b>Session 17: 14:00 - 15:25</b><br>
                                         Chair: Marla Geha<br>
+                                        Lydia Elias (S)<br>
+                                        Chervin Laporte (S)<br>
                                         Nora Shipp (S)<br>
                                         Ian Roederer (S)<br>
-                                        Giuseppina Battaglia (L)<br>
                                         Nathan Sandford (S)<br>
                                         Evan Skillman (S)<br>
                                     </section>
