--- a/index.html
+++ b/index.html
@@ -384,62 +384,62 @@
                                     <b>Poster Presentations Group 1</b><br>
                                     <b>Monday: 12:15-12:30</b><br>
                                     <br>
-									Luca Beale (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/Beale_poster'>poster</a>)<br>
-									Paul Bennet (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
-									Katie Chamberlain (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
-									Anirudh Chiti (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
-									Richard D'Souza (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
-									Michele De Leo (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
-									Andres del Pino (<a href='slides/PP1/NA_slides'>slides</a>, <a href='slides/PP1/NA_poster'>poster</a>)<br>
+									Luca Beale (<a href='slides/NA_slides'>slides</a>, <a href='slides/Beale_poster'>poster</a>)<br>
+									Paul Bennet (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Katie Chamberlain (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Anirudh Chiti (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Richard D'Souza (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Michele De Leo (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Andres del Pino (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 2</b><br>
                                     <b>Monday: 15:15-15:30</b><br>
                                     <br>
-									Dhruba Dutta Chowdhury (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
-                                    F. Sara Eftekhari (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
-									Christoph Engler (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
-									Raphael Errani (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
-									Ivanna Escala (<a href='slides/PP2/Escala_slides'>slides</a>, <a href='slides/PP2/Escala_poster'>poster</a>)<br>
-									Catherine Fielder (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
-									Tobias Fritz (<a href='slides/PP2/NA_slides'>slides</a>, <a href='slides/PP2/NA_poster'>poster</a>)<br>
+									Dhruba Dutta Chowdhury (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+                                    F. Sara Eftekhari (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Christoph Engler (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Raphael Errani (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Ivanna Escala (<a href='slides/Escala_slides'>slides</a>, <a href='slides/Escala_poster'>poster</a>)<br>
+									Catherine Fielder (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Tobias Fritz (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 3</b><br>
                                     <b>Tuesday: 12:00-12:15</b><br>
                                     <br>
-                                    Marla Geha (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
-									Alexandra Gregory (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
-									Wojciech Hellwing (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
-									Geraint Lewis (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
-									Zhaozhou Li (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
-									Nicolas Longeard (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
-                                    Aaron Ludlow (<a href='slides/PP3/NA_slides'>slides</a>, <a href='slides/PP3/NA_poster'>poster</a>)<br>
+                                    Marla Geha (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Alexandra Gregory (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Wojciech Hellwing (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Geraint Lewis (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Zhaozhou Li (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Nicolas Longeard (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+                                    Aaron Ludlow (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 4</b><br>
                                     <b>Tuesday: 12:15-12:30</b><br>
                                     <br>
-									Pol Massana (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
-									Matthew Orkney (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
-									Sanjaya Paudel (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
-									Rhys Poulton (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
-									Janet Preston (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
-									Ragadeepika Pucha (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
-									Daniella Roberts (<a href='slides/PP4/NA_slides'>slides</a>, <a href='slides/PP4/NA_poster'>poster</a>)<br>
+									Pol Massana (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Matthew Orkney (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Sanjaya Paudel (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Rhys Poulton (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Janet Preston (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Ragadeepika Pucha (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Daniella Roberts (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
                                 </section>
                                 <section>
                                     <b>Poster Presentations Group 5</b><br>
                                     <b>Tuesday: 15:15-15:30</b><br>
                                     <br>
-                                    Anton Rudakovskyi (<a href='slides/PP5/NA_slides'>slides</a>, <a href='slides/PP5/NA_poster'>poster</a>)<br>
-									Elena Sacchi (<a href='slides/PP5/NA_slides'>slides</a>, <a href='slides/PP5/NA_poster'>poster</a>)<br>
-									Isabel Santos Santos (<a href='slides/PP5/NA_slides'>slides</a>, <a href='slides/PP5/NA_poster'>poster</a>)<br>
-									Matthew Smith (<a href='slides/PP5/NA_slides'>slides</a>, <a href='slides/PP5/NA_poster'>poster</a>)<br>
-									Salvatore Taibi (<a href='slides/PP5/NA_slides'>slides</a>, <a href='slides/PP5/NA_poster'>poster</a>)<br>
-									Guillaume Thomas (<a href='slides/PP5/NA_slides'>slides</a>, <a href='slides/PP5/NA_poster'>poster</a>)<br>
-									David Williamson (<a href='slides/PP5/NA_slides'>slides</a>, <a href='slides/PP5/NA_poster'>poster</a>)<br>
-									Zhen Yuan (<a href='slides/PP5/NA_slides'>slides</a>, <a href='slides/PP5/NA_poster'>poster</a>)<br>
+                                    Anton Rudakovskyi (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Elena Sacchi (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Isabel Santos Santos (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Matthew Smith (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Salvatore Taibi (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Guillaume Thomas (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									David Williamson (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
+									Zhen Yuan (<a href='slides/NA_slides'>slides</a>, <a href='slides/NA_poster'>poster</a>)<br>
                                 </section>
                                 <section>
                                 </section>
